Wed Oct  4 13:16:18 CEST 2000  Werner Koch  <wk@openit.de>

        * sha1.c (transform): Use rol() macro.  Actually this is not needed
        for a newer gcc but there are still aoter compilers.

        * rsa.c (test_keys): Use new random function. 

        * md.c (gcry_md_setkey): New function to overcome problems with
        const conflics.  
        (gcry_md_ctl): Pass set key to the new functions.

        * rijndael.c: New.
        * cipher.c: Add Rijndael support.

Mon Sep 18 16:35:45 CEST 2000  Werner Koch  <wk@openit.de>

        * rndlinux.c (open_device): Loose random device checking.
        By Nils Ellmenreich.

        * random.c (fast_random_poll): Check ENOSYS for getrusage.
        * rndunix.c:  Add 2 sources for QNX. By Sam Roberts.

        * pubkey.c (gcry_pk_algo_info): Add GCRYCTL_GET_ALGO_USAGE.

        * rsa.c: Changed the comment about the patent.
        (secret): Speed up by using the CRT.  For a 2k keys this
        is about 3 times faster.
        (stronger_key_check): New but unused code to check the secret key.
        * Makefile.am: Included rsa.[ch].
        * pubkey.c: Enabled RSA support.
        (pubkey_get_npkey): Removed RSA workaround.

Mon Jul 31 10:04:47 CEST 2000  Werner Koch  <wk@openit.de>

  * pubkey.c: Replaced all gcry_sexp_{car,cdr}_{data,mpi} by the new
  gcry_sexp_nth_{data,mpi} functions.

Tue Jul 25 17:44:15 CEST 2000  Werner Koch  <wk@openit.de>

  * pubkey.c (exp_to_key,sexp_to_sig,sexp_to_enc,gcry_pk_encrypt,
    gcry_pk_decrypt,gcry_pk_sign,gcry_pk_genkey): Changed to work with
    the new S-Exp interface.

Mon Jul 17 16:35:47 CEST 2000  Werner Koch  <wk@>

  * random.c (gather_faked): Replaced make_timestamp by time(2) again.

Fri Jul 14 19:38:23 CEST 2000  Werner Koch  <wk@>

  * md.c (gcry_md_ctl): Support GCRYCTL_{START,STOP}_DUMP.

  * Makefile.am: Never compile mingw32 as module.

  * Makefile.am: Tweaked module build and removed libtool
